@@ -1,0 +1,11 @@
+// SimpleSignal.cs - Simple callback delegate.
+//
+// Author: Bob Smith <bob@thestuff.net>
+//
+// (c) 2001 Bob Smith
+
+namespace Gtk {
+	using System;
+
+	public delegate void SimpleSignal (IntPtr obj, IntPtr data);
+}
