@@ -1,3 +1,10 @@
+2001-09-20
+
+	* glib/ObjectManager.cs: Nuked.
+	* glib/Object.cs: Keep track of wrapper.
+	* gtk/Object: First stab at better signal system. Should reduce
+	number of pins nessisary.
+
 2001-09-19  Mike Kestner  <mkestner@speakeasy.net>
 
 	* HACKING : New rulez.
